--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.542.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
