--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
